# skuff

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
src/cmd/: config.rs  in.rs  log.rs  ls.rs  mod.rs  new.rs  out.rs  rm.rs  switch.rs
src/core/: error.rs  id.rs  log.rs  mod.rs  state.rs  util.rs
src/core/format/: config.rs  mod.rs  stream.rs
src/core/io/: mod.rs  settings.rs  storage.rs  util.rs
src/core/layout/: mod.rs  settings.rs  storage.rs
