[package]
name = "skuff"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
lazy_static = "1.5.0"
pager = "0.16.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.4.0"

[[bin]]
name = "skuff"
path = "src/main.rs"
